[package]
name = "s4u_task_test"
version = "0.1.0"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comedy = "0.1"
chrono = "0.4"
failure = "0.1"

[dependencies.winapi]
version = "0.3.7"
features = ["errhandlingapi", "minwindef", "ntdef", "oaidl", "oleauto", "sysinfoapi", "taskschd", "winbase", "winerror", "winnt", "winreg", "wtypes"]
